--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -1,3 +1,87 @@
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  header {
+    width: 100%;
+    height: 400px;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
+  }
+  nav .logomansa {
+    padding: 0;
+  }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    background-color: snow;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  nav ul li a {
+    width: 100%;
+    background-color: snow;
+    height: 30px;
+  }
+}
+.welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.welcome .welcomel {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+.welcome .welcomel section {
+  padding: 0;
+  margin: 0;
+}
+.welcome .welcomel section h2 {
+  margin: 0;
+  padding: 0;
+}
+.welcome .welcomel section p {
+  margin: 0;
+  padding: 0;
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  nav {
+    background-color: blue;
+  }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+  }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  nav {
+    background-color: green;
+  }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+  }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  nav {
+    background-color: white;
+  }
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  nav {
+    background-color: snow;
+  }
+}
 body {
   font: 100% "Noto Sans Mono", monospace;
   color: #0E111B;
@@ -116,12 +200,12 @@ p {
   display: block;
   width: 300px;
   text-align: center;
-  padding: 10px;
+  padding: 5px;
 }
 .recent article p {
   width: 300px;
   text-align: justify;
-  padding: 10px;
+  padding: 5px;
 }
 
 button {
