--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -19,7 +19,10 @@
     background-color: snow;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 400px;
+  }
+  nav ul li {
+    width: 100%;
   }
   nav ul li a {
     width: 100%;
@@ -48,6 +51,32 @@
 .welcome .welcomel section p {
   margin: 0;
   padding: 0;
+}
+
+.recent section {
+  display: flex;
+  flex-direction: column;
+}
+.recent article {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #B8B8B8;
+  margin: 19px;
+  width: 300px;
+  border-radius: 60px;
+}
+.recent article h2 {
+  display: block;
+  width: 300px;
+  text-align: center;
+  padding: 5px;
+}
+.recent article p {
+  width: 300px;
+  text-align: justify;
+  padding: 5px;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
