--- a/stylesheets/mediaqueries.css
+++ b/stylesheets/mediaqueries.css
@@ -49,9 +49,9 @@
   padding: 0;
 }
 .welcome .welcomel section p {
-  width: auto;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 .recent section {
