--- a/sass/mediaqueries.sass
+++ b/sass/mediaqueries.sass
@@ -13,25 +13,36 @@ $liwidth: 7rem
     width: 100%
     height: 400px
   nav
+    height: $navheight
+    background-color: $second-bcolor
+    margin: 0
+    padding: 0
+    width: 100%
+  //position: fixed
+  //top: 0px
+
+  ul
+    height: 440px
+    background-color: $second-bcolor
+    list-style-type: none
+    margin: 0
+    padding: 0
     display: flex
     flex-direction: column
-    align-items: center
-    height: 400px
-    .logomansa
-      padding: 0
-    ul
-      display: flex
-      flex-direction: column
-      background-color: snow
-      align-items: center
-      width: 100%
-      height: 400px
-      li
-        width: 100%
-        a
-          width: 100%
-          background-color: snow
-          height: 30px
+    .navli
+      width: 7rem
+      a
+        text-decoration: none
+        text-align: center
+        display: block
+        color: $text-color
+        height: $navheight
+        width: $liwidth
+      a:hover
+        background-color: snow
+      a:active
+        color: white
+
   .welcome
     display: flex
     flex-direction: column
@@ -41,14 +52,12 @@ $liwidth: 7rem
       flex-direction: column-reverse
       align-items: center
     section
-      padding: 0
-      margin: 0
+      width: 300px
       h2
         margin: 0
         padding: 0
       p
-        margin: 0
-        padding: 0
+        dv:100%
 
   .recent
     section
