--- a/sass/global.css
+++ b/sass/global.css
@@ -1,42 +1,5 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  header {
-    width: 100%;
-    height: 400px;
-  }
-  nav {
-    height: 5rem;
-    background-color: #84615C;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-  }
-  ul {
-    height: 440px;
-    background-color: #84615C;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-  }
-  ul .navli {
-    width: 7rem;
-  }
-  ul .navli a {
-    text-decoration: none;
-    text-align: center;
-    display: block;
-    color: #0E111B;
-    height: 5rem;
-    width: 7rem;
-  }
-  ul .navli a:hover {
-    background-color: snow;
-  }
-  ul .navli a:active {
-    color: white;
-  }
   .welcome {
     display: flex;
     flex-direction: column;
@@ -44,18 +7,17 @@
   }
   .welcome .welcomel {
     display: flex;
+    width: 100%;
     flex-direction: column-reverse;
     align-items: center;
   }
   .welcome section {
-    width: 300px;
-  }
-  .welcome section h2 {
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    height: auto;
   }
   .welcome section p {
-    dv: 100%;
+    width: 100%;
+    padding: 10px;
   }
   .recent section {
     display: flex;
@@ -115,42 +77,6 @@
     background-color: snow;
   }
 }
-body {
-  font: 100% "Noto Sans Mono", monospace;
-  color: #0E111B;
-  background-color: #eae4e4;
-  padding: 0;
-  margin: 0;
-}
-
-h1 {
-  background-color: #B8B8B8;
-  text-align: center;
-  height: 70px;
-  line-height: 70px;
-}
-
-.logomansa {
-  height: 80px;
-  padding: 0px;
-  margin: 0px;
-  float: left;
-}
-
-.mansaimg {
-  border-radius: 30px;
-  height: 500px;
-  margin: 10px;
-  float: right;
-}
-
-.artimg {
-  height: 250px;
-  width: 100%;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-}
-
 nav {
   height: 5rem;
   background-color: #84615C;
@@ -185,6 +111,122 @@ nav ul .navli a:hover {
 }
 nav ul .navli a:active {
   color: white;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  header {
+    height: 400px;
+  }
+  header .logomansa {
+    width: 150px;
+    text-align: center;
+  }
+  nav {
+    height: 400px;
+    background-color: white;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  nav ul {
+    background-color: #84615C;
+    height: 400px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  nav ul .navli {
+    display: flex;
+    flex-direction: column;
+  }
+  nav ul .navli a {
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    color: #0E111B;
+    height: 5rem;
+    width: 7rem;
+  }
+  nav ul .navli a:hover {
+    background-color: snow;
+  }
+  nav ul .navli a:active {
+    color: white;
+  }
+}
+footer {
+  height: 100px;
+  background-color: #84615C;
+  text-align: center;
+}
+footer i {
+  font-size: 50px;
+  margin-top: 23px;
+  margin-left: 10px;
+}
+
+.logomansa {
+  height: 80px;
+  padding: 0px;
+  margin: 0px;
+  float: left;
+}
+
+.mansaimg {
+  border-radius: 30px;
+  height: 500px;
+  margin: 10px;
+  float: right;
+}
+
+.artimg {
+  height: 250px;
+  width: 100%;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .logomansa {
+    height: 80px;
+    padding: 0px;
+    margin: 0px;
+    float: left;
+  }
+  .mansaimg {
+    border-radius: 30px;
+    height: 200px;
+    text-align: center;
+  }
+  .artimg {
+    height: 250px;
+    width: 100%;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+  }
+}
+body {
+  font: 100% "Noto Sans Mono", monospace;
+  color: #0E111B;
+  background-color: #eae4e4;
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  background-color: #B8B8B8;
+  text-align: center;
+  height: 70px;
+  line-height: 70px;
 }
 
 p {
@@ -268,17 +310,6 @@ button:hover {
 }
 .newsletter input[type=email] {
   padding-left: 25px;
-}
-
-footer {
-  height: 100px;
-  background-color: #84615C;
-  text-align: center;
-}
-footer i {
-  font-size: 50px;
-  margin-top: 23px;
-  margin-left: 10px;
 }
 
 /*# sourceMappingURL=global.css.map */
