--- a/sass/global.sass
+++ b/sass/global.sass
@@ -1,13 +1,8 @@
 @import mediaqueries.sass
-
-//Color variables
-$font-stack: 'Noto Sans Mono', monospace
-$bcolor: #eae4e4
-$text-color: #0E111B
-$header-bcolor: #B8B8B8
-$second-bcolor: #84615C
-$navheight: 5rem
-$liwidth: 7rem
+@import header.sass
+@import footer.sass
+@import variables.sass
+@import images.sass
 
 //Body Styling
 body
@@ -23,62 +18,6 @@ h1
   text-align: center
   height: 70px
   line-height: 70px
-
-//Images Styles
-
-.logomansa
-  height: 80px
-  padding: 0px
-  margin: 0px
-  float: left
-
-.mansaimg
-  border-radius: 30px
-  height: 500px
-  margin: 10px
-  float: right
-
-.artimg
-  height: 250px
-  width: 100%
-  border-top-left-radius: 30px
-  border-top-right-radius: 30px
-
-
-//Navigation Styles
-nav
-  height: $navheight
-  background-color: $second-bcolor
-  list-style-type: none
-  margin: 0
-  padding: 0
-  width: 100%
-  //position: fixed
-  //top: 0px
-
-  ul
-    height: $navheight
-    background-color: $second-bcolor
-    list-style-type: none
-    margin: 0
-    padding: 0
-    display: inline
-    .navli
-      float: left
-      line-height: $navheight
-      width: 7rem
-      a
-        text-decoration: none
-        text-align: center
-        display: block
-        color: $text-color
-        height: $navheight
-        width: $liwidth
-      a:hover
-        background-color: snow
-      a:active
-        color: white
-
 p
   padding: 16px
 .welcome
@@ -144,13 +83,5 @@ button:hover
     width: 250px
   input[type=email]
       padding-left: 25px
-footer
-  height: 100px
-  background-color: $second-bcolor
-  text-align: center
-  i
-    font-size: 50px
-    margin-top: 23px
-    margin-left: 10px
 
 
