--- a/sass/mediaqueries.sass
+++ b/sass/mediaqueries.sass
@@ -12,11 +12,11 @@
       flex-direction: column-reverse
       align-items: center
     section
-      width: 100%
+      width: vw
       height: auto
       p
-        width: 100%
-        padding: 10px
+        width: vw
+        
 
   .recent
     section
