--- a/sass/global.sass
+++ b/sass/global.sass
@@ -17,27 +17,76 @@ body
 h1
   background-color: $header-bcolor
   text-align: center
-  height: 70px
+  height: 80px
   line-height: 70px
+  margin-block-start: 0em
+  margin-block-end: 0em
 // p
 //   padding: 16px
 .welcome
   margin: 0px
   padding: 0px
+  width: 100%
+  background-image: url("../images/backimage.jpg")
+  background-size: cover
+  background-attachment: fixed
+  
 
 .welcomel
   display: flex
+ 
   section
     width: 60%
+    margin-top: 70px
+    background-color: rgba(255,255,255,.7)
+
     p
-      padding-left: 70px
+      margin-left: 100px
+      padding: 15px
       width: 530px
       text-align: justify
+      background-color: rgba(255,255,255,.88)
     h2
-      padding: 70px
+      margin-left: 100px
+      margin-top: 150px
+      padding: 15px
+      background-color: rgba(255,255,255,.68)
+
   img
     padding: 10px
+    margin-top: 85px
+    opacity: 1
+
+  
+.work
+  margin: 0px
+  padding: 0px
+  width: 100%
+  background-image: url("../images/work.jpg")
+  background-size: cover
+  background-attachment: fixed
+  .workel
+    display: flex
+    section
+       width: 60%
+       margin-top: 70px
+       p
+         margin-left: 100px
+         padding: 15px
+         width: 530px
+         text-align: justify
+       h2
+         margin-left: 100px
+         margin-top: 150px
+         padding: 15px
+  
+  
+  
 .recent
+  background-image: url("../images/recentbg.jpg")
+  background-size: cover
+  background-attachment: fixed
+
   section
     display: flex
     padding: 30px
@@ -46,7 +95,7 @@ h1
     display: flex
     flex-direction: column
     align-items: center
-    background-color: $header-bcolor
+    background-color: rgba(255,255,255,.68)
     margin: 19px
     width: 300px
     border-radius: 60px
@@ -94,6 +143,7 @@ button:hover
     flex-direction: column
     justify-content: center
     width: 100%
+    
     .welcomel
       display: flex
       width: 100%
