--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -1,10 +1,13 @@
 nav {
   height: 5rem;
   background-color: #84615C;
+  opacity: 0.9;
   list-style-type: none;
   margin: 0;
   padding: 0;
   width: 100%;
+  position: fixed;
+  z-index: 1000;
 }
 nav ul {
   height: 5rem;
@@ -23,12 +26,13 @@ nav ul .navli a {
   text-decoration: none;
   text-align: center;
   display: block;
-  color: #0E111B;
+  color: white;
   height: 5rem;
   width: 7rem;
 }
 nav ul .navli a:hover {
   background-color: snow;
+  color: black;
 }
 nav ul .navli a:active {
   color: white;
