--- a/sass/global.sass
+++ b/sass/global.sass
@@ -14,7 +14,7 @@ body
   margin: 0
 
 // Title banner styles
-h1
+.he1
   background-color: $header-bcolor
   text-align: center
   height: 80px
@@ -26,7 +26,8 @@ h1
 .welcome
   margin: 0px
   padding: 0px
-  width: 100%
+  width: 100vw
+  height: 100vh
   background-image: url("../images/backimage.jpg")
   background-size: cover
   background-attachment: fixed
@@ -62,14 +63,16 @@ h1
   margin: 0px
   padding: 0px
   width: 100%
+  height: 600px
   background-image: url("../images/work.jpg")
   background-size: cover
   background-attachment: fixed
   .workel
     display: flex
+    color: white
     section
        width: 60%
-       margin-top: 70px
+       margin-top: 30px
        p
          margin-left: 100px
          padding: 15px
@@ -77,8 +80,36 @@ h1
          text-align: justify
        h2
          margin-left: 100px
-         margin-top: 150px
+         margin-top: 80px
          padding: 15px
+
+  
+.biomansa
+  margin-top: 0px
+  padding: 0px
+  width: 100%
+  height: 100%
+  background-image: url("../images/biopic.jpg")
+  background-size: cover
+  background-attachment: fixed
+  display: flex
+  .bioel
+    margin-top: 100px
+    h1
+      margin-left: 100px
+      padding: 15px
+    p
+      width: 60%
+      margin-left: 100px
+      padding: 15px
+      line-height: 30px
+
+  
+  
+.designwork
+  background-image: url(../images/workel.jpg)
+  padding: 10px
+  background-attachment: fixed
   
   
   
