--- a/sass/global.sass
+++ b/sass/global.sass
@@ -16,14 +16,15 @@ body
 h1
   background-color: $header-bcolor
   text-align: center
-  height: 70px
-  line-height: 70px
+  height: $navheight
+
 p
   padding: 16px
 .welcome
   margin: 0px
   padding: 0px
 
+  
 .welcomel
   display: flex
   section
