--- a/sass/global.css
+++ b/sass/global.css
@@ -225,8 +225,7 @@ body {
 h1 {
   background-color: #B8B8B8;
   text-align: center;
-  height: 70px;
-  line-height: 70px;
+  height: 5rem;
 }
 
 p {
