--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -231,8 +231,7 @@ body {
 h1 {
   background-color: #B8B8B8;
   text-align: center;
-  height: 70px;
-  line-height: 70px;
+  height: 5rem;
 }
 
 p {
