--- a/sass/global.css
+++ b/sass/global.css
@@ -1,50 +1,4 @@
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .welcome {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .welcome .welcomel {
-    display: flex;
-    width: 100%;
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-  .welcome section {
-    width: 100%;
-    height: auto;
-  }
-  .welcome section p {
-    width: 100%;
-    padding: 10px;
-  }
-  .recent section {
-    display: flex;
-    flex-direction: column;
-  }
-  .recent article {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #B8B8B8;
-    margin: 19px;
-    width: 300px;
-    border-radius: 60px;
-  }
-  .recent article h2 {
-    display: block;
-    width: 300px;
-    text-align: center;
-    padding: 5px;
-  }
-  .recent article p {
-    width: 300px;
-    text-align: justify;
-    padding: 5px;
-  }
-}
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   nav {
@@ -80,10 +34,13 @@
 nav {
   height: 5rem;
   background-color: #84615C;
+  opacity: 0.9;
   list-style-type: none;
   margin: 0;
   padding: 0;
   width: 100%;
+  position: fixed;
+  z-index: 1000;
 }
 nav ul {
   height: 5rem;
@@ -102,12 +59,13 @@ nav ul .navli a {
   text-decoration: none;
   text-align: center;
   display: block;
-  color: #0E111B;
+  color: white;
   height: 5rem;
   width: 7rem;
 }
 nav ul .navli a:hover {
   background-color: snow;
+  color: black;
 }
 nav ul .navli a:active {
   color: white;
@@ -222,19 +180,24 @@ body {
   margin: 0;
 }
 
-h1 {
+.he1 {
   background-color: #B8B8B8;
   text-align: center;
-  height: 5rem;
-}
-
-p {
-  padding: 16px;
+  height: 80px;
+  line-height: 70px;
+  font-size: 50px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
 }
 
 .welcome {
   margin: 0px;
   padding: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../images/backimage.jpg");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .welcomel {
@@ -242,19 +205,97 @@ p {
 }
 .welcomel section {
   width: 60%;
+  margin-top: 70px;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 .welcomel section p {
-  padding-left: 70px;
+  margin-left: 100px;
+  padding: 15px;
   width: 530px;
   text-align: justify;
+  background-color: rgba(255, 255, 255, 0.88);
 }
 .welcomel section h2 {
-  padding: 70px;
+  margin-left: 100px;
+  margin-top: 150px;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.68);
 }
 .welcomel img {
   padding: 10px;
+  margin-top: 85px;
+  opacity: 1;
 }
 
+.work {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 600px;
+  background-image: url("../images/work.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+}
+.work .workel {
+  display: flex;
+  color: white;
+}
+.work .workel section {
+  width: 60%;
+  margin-top: 30px;
+}
+.work .workel section p {
+  margin-left: 100px;
+  padding: 15px;
+  width: 530px;
+  text-align: justify;
+}
+.work .workel section h2 {
+  margin-left: 100px;
+  margin-top: 80px;
+  padding: 15px;
+}
+
+.biomansa {
+  margin-top: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/Backbio.png");
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+}
+.biomansa .bioel {
+  margin-top: 100px;
+}
+.biomansa .bioel h1 {
+  margin-left: 90px;
+  padding: 15px;
+}
+.biomansa .bioel p {
+  width: 50%;
+  margin-left: 90px;
+  padding: 15px;
+  line-height: 30px;
+  text-align: justify;
+}
+
+.aboutme {
+  margin: 60px;
+}
+
+.designwork {
+  background-image: url(../images/workel.jpg);
+  padding: 10px;
+  background-attachment: fixed;
+}
+
+.recent {
+  background-image: url("../images/recentbg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+}
 .recent section {
   display: flex;
   padding: 30px;
@@ -264,7 +305,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #B8B8B8;
+  background-color: rgba(255, 255, 255, 0.68);
   margin: 19px;
   width: 300px;
   border-radius: 60px;
@@ -309,6 +350,63 @@ button:hover {
 }
 .newsletter input[type=email] {
   padding-left: 25px;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    width: 100%;
+  }
+  .welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+  .welcome .welcomel {
+    display: flex;
+    width: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .welcome section {
+    width: 100%;
+  }
+  .welcome section h2 {
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+  }
+  .welcome section p {
+    padding: 20px;
+    width: 90%;
+    text-align: justify;
+  }
+  .recent section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .recent article {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #B8B8B8;
+    margin: 19px;
+    width: 300px;
+    border-radius: 60px;
+  }
+  .recent article h2 {
+    display: block;
+    text-align: center;
+    padding: 5px;
+  }
+  .recent article p {
+    width: 300px;
+    text-align: justify;
+    padding: 5px;
+  }
 }
 
 /*# sourceMappingURL=global.css.map */
