--- a/sass/global.sass
+++ b/sass/global.sass
@@ -19,6 +19,7 @@ body
   text-align: center
   height: 80px
   line-height: 70px
+  font-size: 50px
   margin-block-start: 0em
   margin-block-end: 0em
 // p
@@ -89,21 +90,23 @@ body
   padding: 0px
   width: 100%
   height: 100%
-  background-image: url("../images/biopic.jpg")
+  background-image: url("../images/Backbio.png")
   background-size: cover
   background-attachment: fixed
   display: flex
   .bioel
     margin-top: 100px
     h1
-      margin-left: 100px
+      margin-left: 90px
       padding: 15px
     p
-      width: 60%
-      margin-left: 100px
+      width: 50%
+      margin-left: 90px
       padding: 15px
       line-height: 30px
-
+      text-align: justify
+.aboutme
+  margin: 60px
   
   
 .designwork
