--- a/sass/global.sass
+++ b/sass/global.sass
@@ -20,8 +20,8 @@ body
   height: 80px
   line-height: 70px
   font-size: 50px
-  margin-block-start: 0em
-  margin-block-end: 0em
+  display: block
+
 // p
 //   padding: 16px
 .welcome
