--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -192,8 +192,7 @@ body {
   height: 80px;
   line-height: 70px;
   font-size: 50px;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
+  display: block;
 }
 
 .welcome {
